package com.uitopic.restock.platform.subscriptions.domain.model.entities;

import lombok.*;

@Data
@NoArgsConstructor
@AllArgsConstructor
@With
@EqualsAndHashCode
public class Plan {

    private String id;
}
