package com.uitopic.restock.platform.subscriptions.domain.model.valueobjects;

/**
 * Enumeration representing the status of a subscription account in the system.
 */
public enum AccountStatus {
    ACTIVE,
    TRIALING,
    INACTIVE,
    CANCELED
}
